monit/011-monit-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: monit
  name: monit
  namespace: monit
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: monit
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: monit
    spec:
      containers:
      - name: monit
        image: mazdermind/alpine-monit:reload-on-config-change
        volumeMounts:
        - mountPath: /opt/monit/etc/conf.d
          name: monit-config

        - mountPath: /state
          name: monit-state

      - name: check-receiver
        image: mazdermind/check-receiver

        volumeMounts:
        - mountPath: /var/check-receiver/status-files/
          name: monit-state

      volumes:
      - name: monit-state
        persistentVolumeClaim:
          claimName: monit-state

      - name: monit-config
        persistentVolumeClaim:
          claimName: monit-config
